--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1",
+    "react-transition-group": "^1.2.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
