--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-modal": "^2.2.1",
     "react-router-dom": "^4.1.1",
     "react-transition-group": "^1.2.0",
     "sort-by": "^1.2.0"
